<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activity.NewsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme"
        app:elevation="0dp">

        <TextView
            android:id="@+id/txt_app_name_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/waffle_light"
            android:gravity="center"
            android:text="@string/nav_creature"
            android:textSize="30sp"
            android:textStyle="bold"  />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FF0000FF" />


    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/creature_code_desc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/waffle_light"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/waffle_light"
        android:text="@string/creature_code"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creature_local_name_desc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/waffle_light"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/waffle_light"
        android:text="@string/creature_local_name"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/waffle_light"
        android:text="@string/creature_normal_name"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/creature_normal_name_desc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/waffle_light"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/creature_sci_name"
        android:fontFamily="@font/waffle_light"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/creature_sci_name_desc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/waffle_light"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="230dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/creature_img_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
            android:id="@+id/creature_character"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:padding="10dp"
            android:fontFamily="@font/waffle_light"
            android:text="TextView"
            android:textSize="24sp"
                android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/creature_original"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:fontFamily="@font/waffle_light"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creature_character" />

            <TextView
                android:id="@+id/creature_distribution"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:fontFamily="@font/waffle_light"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creature_original" />

            <TextView
                android:id="@+id/creature_ecology"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:fontFamily="@font/waffle_light"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creature_distribution" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>